--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "fontsource-roboto": "^4.0.0",
     "next": "latest",
     "p5": "^1.4.0",
+    "plotly.js-dist": "^2.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-p5": "^1.3.25",
+    "recharts": "^2.1.14",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
   },
